2002-05-16  jacob berkman  <jacob@ximian.com>

	* schemas/apps_gnome_settings_daemon_default_editor.schemas: add a
	key to turn off some behaviour

	* capplets/Makefile.am (always_built_SUBDIRS): 
	* configure.in: re-add default-applications

	fixes #78037

2002-05-14  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* configure.in:

	Move the window setting code into a seperate directory, libwindow-settings
	so it can be shared between the capplet and the settings daemon, and
	potentially, external window managers.
	
2002-05-12  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Require a new libglade.

2002-05-11  Jacob Berkman  <jacob@ximian.com>

	* capplets/Makefile.am (DIST_SUBDIRS): add windows

2002-05-11  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Create the windows preference page makefile, and add gnome-desktop 
	to the generic module flags.

Wed May  8 17:54:57 2002  Jonathan Blandford  <jrb@redhat.com>

	* capplets/network/gnome-network-preferences.c: update schema keys
	to reflect the installed file.

2002-05-06  Rachel Hestilow  <hestilow@ximian.com>

	* configure.in: Bump version to 1.99.10

	* RELEASE: 1.99.10
	
2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* schemas/Makefile.am: Doh! Remove the file from automake.

	* schemas/apps_gnome_keybinding_properties.schemas:
	We now hard-code the key list, so this isn't neede anymore.
	
2002-04-30  Anders Carlsson  <andersca@gnu.org>

	* capplets/network/gnome-network-preferences.desktop.in:
	Use a snazzier icon here.
	
2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* configure.in: Bump version to 1.99.9

	* RELEASE: 1.99.9
	
2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* configure.in: Bump version to 1.99.8

	* RELEASE: 1.99.8
	
2002-04-29  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): Added Vietnamese (vi)

2002-04-26  Seth Nickell  <snickell@stanford.edu>

	* capplets/Makefile.am:
	* configure.in:
