@@ -1,22 +1,25 @@
-figs = 
-docname = control-center-manual
-lang = C
-omffile = control-center-C.omf
-entities = config-background.xml \
-	   config-behavior.xml \
-	   config-cds.xml \
-           config-hints.xml \
-           config-html.xml \
-           config-kbd.xml \
-           config-keybindings.xml \
-           config-mouse.xml \
-           config-screensaver.xml \
-           config-sound.xml \
-           config-themes.xml \
-	   config-file-type.xml \
-	   config-accessibility-keyboard.xml \
-	   config-default-apps.xml \
-	   control-center.xml
-
-include $(top_srcdir)/help/xmldocs.make
-dist-hook: app-dist-hook
+#
+# Disabled : The control center docs are in the gnome-user-guide module
+#
+#figs = 
+#docname = control-center-manual
+#lang = C
+#omffile = control-center-C.omf
+#entities = config-background.xml \
+#	   config-behavior.xml \
+#	   config-cds.xml \
+#           config-hints.xml \
+#           config-html.xml \
+#           config-kbd.xml \
+#           config-keybindings.xml \
+#           config-mouse.xml \
+#           config-screensaver.xml \
+#           config-sound.xml \
+#           config-themes.xml \
+#	   config-file-type.xml \
+#	   config-accessibility-keyboard.xml \
+#	   config-default-apps.xml \
+#	   control-center.xml
+#
+#include $(top_srcdir)/help/xmldocs.make
+#dist-hook: app-dist-hook
