@@ -1,3 +1,7 @@
+2002-05-29  Jody Goldberg <jody@gnome.org>
+
+	* configure.in : Remove help and help/C
+
 2002-05-16  jacob berkman  <jacob@ximian.com>
 
 	* schemas/apps_gnome_settings_daemon_default_editor.schemas: add a
